# MXMAP-X

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  README.md  alembic.ini  docker-compose.yml  init-db.sql  pyproject.toml
alembic/: env.py
alembic/versions/: 001_add_filtering_tables.py  002_add_printing_tables.py
app/: __init__.py  config.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: advanced.py  devices.py  filtering.py  models.py  predictions.py  printing.py
app/core/: __init__.py  dependencies.py  exceptions.py
app/db/: session.py
app/ml/: __init__.py  chemistry_explorer.py  dummy.py  eis_surrogate.py  feature_engineering.py  model_loader.py  optimization.py  predictor.py  printing_surrogates.py  xgboost_model.py
app/models/: database.py  schemas.py
app/templates/: base.html  electrochromic.html  explore.html  filtering.html  index.html  optimize.html  printing.html  recipe.html
app/web/: __init__.py  routes.py
config/: model_config.yaml
docs/: ADVANCED_FEATURES.md  ELECTROCHROMIC_VISUALIZATION.md  IMPLEMENTATION_SUMMARY.md  ML_PIPELINE.md  RECIPE_CARD_SYSTEM.md  VISUALIZATION_FEATURES_SUMMARY.md  WEB_INTERFACE.md
scripts/: evaluate_model.py  generate_synthetic_data.py  quickstart.sh  seed_db.py  train_model.py
tests/: __init__.py  conftest.py  test_advanced_endpoints.py  test_filtering.py  test_filtering_api.py  test_health.py  test_predictions.py  test_printing.py  test_printing_api.py  test_xgboost_model.py
