[tool.poetry]
name = "mxmap-x-backend"
version = "0.1.0"
description = "AI-powered MXene supercapacitor design tool - Backend API"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
scikit-learn = "^1.4.0"
xgboost = "^2.0.3"
numpy = "^1.26.3"
pandas = "^2.1.4"
pyyaml = "^6.0.1"
python-multipart = "^0.0.6"
httpx = "^0.26.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
joblib = "^1.3.2"
umap-learn = "^0.5.5"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
mypy = "^1.8.0"
black = "^23.12.1"
ruff = "^0.1.11"
types-pyyaml = "^6.0.12.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
